# upselling_config

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  doxygen_crawl.html  graph_legend.html  index.html  md_README.html  menudata.js  pages.html
.github/workflows/: documentation.yml  release.yml
dependslib/: dll2implib.bat  dll2implib.readme
dependslib/_lib_src_to_build/: README.txt
dependslib/_lib_src_to_build/Botan-2.12.1/: configure.py  license.txt  news.rst  readme.rst
dependslib/_lib_src_to_build/Botan-2.12.1/doc/: building.rst  cli.rst  deprecated.rst  pgpkey.txt  roadmap.rst  security.rst  side_channels.rst  support.rst
dependslib/_lib_src_to_build/cpr-1.3.0/: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
dependslib/_lib_src_to_build/cpr-1.3.0/cpr/: CMakeLists.txt  auth.cpp  error.cpp  session.cpp  timeout.cpp
dependslib/_lib_src_to_build/cpr-1.3.0/opt/: CMakeLists.txt
dependslib/_lib_src_to_build/cpr-1.3.0/test/: CMakeLists.txt  alternating_tests.cpp  async_tests.cpp  callback_tests.cpp  delete_tests.cpp  error_tests.cpp  get_tests.cpp  head_tests.cpp  options_tests.cpp  patch_tests.cpp  post_tests.cpp  proxy_tests.cpp  put_tests.cpp  raw_body_tests.cpp  server.cpp  server.h  session_tests.cpp  util_tests.cpp
dependslib/_lib_src_to_build/curl-7.47.1/: CHANGES  Makefile  Makefile.am  Makefile.in  RELEASE-NOTES  acinclude.m4  configure  configure.ac  maketgz
dependslib/_lib_src_to_build/curl-7.47.1/docs/: CONTRIBUTE  FAQ  HTTP2.md  KNOWN_BUGS  Makefile.am  Makefile.in  SSLCERTS  TODO  curl.1  curl.html  mk-ca-bundle.html
dependslib/_lib_src_to_build/curl-7.47.1/include/: Makefile.in
dependslib/_lib_src_to_build/curl-7.47.1/lib/: Makefile.Watcom  Makefile.am  Makefile.b32  Makefile.in  Makefile.inc  Makefile.m32  Makefile.netware  amigaos.c  asyn-ares.c  asyn-thread.c  base64.c  checksrc.pl  config-win32.h  conncache.c  connect.c  cookie.c  curl_addrinfo.c  curl_config.h.in  curl_des.c  curl_des.h  curl_fnmatch.c  curl_gssapi.c  curl_gssapi.h  curl_memory.h  curl_memrchr.c  curl_multibyte.c  curl_ntlm.c  curl_ntlm_core.c  curl_ntlm_msgs.c  curl_ntlm_msgs.h  curl_ntlm_wb.c  curl_sasl.c  curl_sasl.h  curl_sasl_gssapi.c  curl_sasl_sspi.c  curl_setup.h  curl_sspi.c  curl_threads.c  dotdot.c  easy.c  (+65 more)
dependslib/_lib_src_to_build/curl-7.47.1/m4/: curl-confopts.m4  curl-functions.m4  libtool.m4
dependslib/_lib_src_to_build/curl-7.47.1/projects/: README  build-openssl.bat  checksrc.bat
dependslib/_lib_src_to_build/curl-7.47.1/scripts/: Makefile.am  Makefile.in
dependslib/_lib_src_to_build/curl-7.47.1/src/: Makefile.am  Makefile.in  Makefile.m32  tool_cb_hdr.c  tool_cfgable.c  tool_cfgable.h  tool_doswin.c  tool_formparse.c  tool_getparam.c  tool_help.c  tool_hugehelp.c  tool_operate.c  tool_urlglob.c  tool_version.h  tool_vms.c
dependslib/_lib_src_to_build/curl-7.47.1/tests/: Makefile.am  Makefile.in  runtests.pl  secureserver.pl  sshhelp.pm  sshserver.pl  testcurl.html
dependslib/_lib_src_to_build/curlpp-0.8.1/: CMakeLists.txt  Readme.md  conanfile.txt
dependslib/_lib_src_to_build/libssh2/: .gitignore  .travis.yml  CMakeLists.txt  Makefile.OpenSSL.inc  Makefile.WinCNG.inc  Makefile.am  Makefile.inc  Makefile.libgcrypt.inc  README  RELEASE-NOTES  acinclude.m4  appveyor.yml  buildconf  configure.ac  libssh2.pc.in  maketgz
dependslib/_lib_src_to_build/libssh2/docs/: BINDINGS  CMakeLists.txt  INSTALL_AUTOTOOLS  INSTALL_CMAKE  Makefile.am  libssh2_channel_wait_eof.3  libssh2_hostkey_hash.3  libssh2_session_callback_set.3  libssh2_session_supported_algs.3
dependslib/_lib_src_to_build/libssh2/example/: .gitignore  CMakeLists.txt  Makefile.am  direct_tcpip.c  scp.c  (+21 more)
dependslib/_lib_src_to_build/libzip-1.5.2a/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  NEWS.md  README.md  THANKS  TODO.md  appveyor.yml  cmake-config.h.in  cmake-zipconf.h.in  libzip.pc.in
dependslib/_lib_src_to_build/openssl-1.0.2/: CHANGES  Configure  FAQ  MINFO  Makefile  Makefile.bak  Makefile.org  NEWS  README  openssl.spec
dependslib/date-2.4.1/src/: tz.cpp
dependslib/gs-xml-rpc-json/: README.MaxF.txt  README.md  json.c  json.cpp  json.h  json.nsmap  jsonC.cpp  jsonH.h  jsonStub.h  jsoncpp.cpp  xml-rpc-io.cpp  xml-rpc-io.h  xml-rpc-iters.h  xml-rpc.c  xml-rpc.cpp  xml-rpc.h
dependslib/gsoap/: README.txt  stdsoap2.cpp
dependslib/libKISSlog/: CREDITS  README.md  kisslog.hpp
dependslib/libKISSlog/demo/: build_demo.sh  char16_syslogdemo.cpp  customdemo.cpp  protocoldemo.cpp  streamdemo.cpp  syslogdemo.cpp  wchar_custdemo.cpp  wchar_streamdemo.cpp
dependslib/libKISSlog/kisslog/: concurrency.hpp  facility.hpp  proto.hpp  rawlogger.hpp  severity.hpp  util.hpp
dependslib/libKISSlog/src/: kisslog-mt-static.cpp
dependslib/libssh2/include/: libssh2.h
dependslib/libzip/include/: zipconf.h
dependslib/openssl/: README.txt
dependslib/openssl/implib/: libeay32.def  libeay32.exp  ssleay32.def  ssleay32.exp
dependslib/popl-1.2.0/include/: popl.hpp
dependslib/tinyxml2/: readme.md
libplcore/: CMakeLists.txt
libplcore/libplcore/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.hpp  Utils._hpp  Utils.cpp  Utils.hpp  UtilsClock.hpp  UtilsDate.cpp  UtilsDate.hpp  UtilsTypes.hpp  botan_all.cpp  botan_all.h  botan_all_internal.h  crypto.cpp  crypto.hpp  ofb_ctr.cpp  ofb_ctr.hpp  plcorexp.h  plposprocdefs.h  plposprocl.h  rounding-algorithms.hpp  settings.cpp  settings.h  settings.hpp
libplcore/tests/settingstest/: CMakeLists.txt  CMakeSettings.json  save_ini0.ini  settingstest.cpp  test_saved.xml  wscardterm.s.ini
plcfg_cli/: CMakeLists.txt
plcfg_cli/plcfg_cli/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.hpp  plcfg_cli.cpp  stdafx.cpp
plcrypt/: CMakeLists.txt
plcrypt/plcrypt/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.hpp  plcrypt.cpp  stdafx.h  version.h.in
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js
(+2010 files in other folders)
